2000-11-04  Manuel Guesdon <mguesdon@orange-concept.com>

	* GSWeb.framework/GSWElementIDString.[hm]: fix bug

2000-11-01  Mirko Viviani  <mirko.viviani@rccr.cremona.it>

	* GSWeb.framework/GSWElementIDString.m ([NSMutableString
	-parentElementIDString]): create a mutableCopy instead of a copy of
	the string.

2000-11-01  Manuel Guesdon <mguesdon@orange-concept.com>

	* GSWeb.framework/GSWTemplateParserXML.m: remove setExternalEntityLoader: call

2000-11-01  Manuel Guesdon <mguesdon@orange-concept.com>

	* GSWeb.framework/GSWTemplateParserXML.m: remove xml-error.h include

2000-11-01  Manuel Guesdon <mguesdon@orange-concept.com>

	* GSWeb.framework/GSWApplication.m: removed a trace
	* GSWeb.framework/GSWTemplateParserXML.m: fix XML 
		properties key case bug
	* GSWeb.framework/GSWElementIDString.[hm]: changed 
		implementation to conform to NSString cluster.
		
2000-11-01  Mirko Viviani  <mirko.viviani@rccr.cremona.it>

	* GSWeb.framework/GSWApplication.m (GSWApplicationMain): fixed path
	for dynamically loading frameworks.

2000-10-30  Mirko Viviani  <mirko.viviani@rccr.cremona.it>

	* GSWeb.framework/htmltag.g: changed gsweb include dir from
	gsweb/GSWeb.framework/ to GSWeb/
	* GSWeb.framework/html.g: likewise.
	* GSWeb.framework/PageDef.g: likewise.
	* GSWeb.framework/GSWResourceManager.m ([GSWResourceManager
	+_applicationGSWBundle]): fix location of MIME.plist and language.plist

2000-10-30  Mirko Viviani  <mirko.viviani@rccr.cremona.it>

	* GSWExtensions.framework/GNUmakefile: rewrite using framework.make
	* GSWExtensions.framework/*.(h|m): changed gsweb include dir from
	gsweb/GSWeb.framework/ to GSWeb/

	* GSWeb.framework/GNUmakefile: rewrite using framework.make
	* GSWeb.framework/*.(h|m): changed gsweb include dir from
	gsweb/GSWeb.framework/ to GSWeb/
	* GSWeb.framework/GSWConstants.m: removed the frameworkd suffix.
	* GSWeb.framework/GSWUtils.m ([NSBundle +tmpAllFrameworks]): removed.

2000-10-29  Mirko Viviani  <mirko.viviani@rccr.cremona.it>
