@@ -1,3 +1,8 @@
+2000-11-24  Mirko Viviani  <mirko.viviani@rccr.cremona.it>
+
+	* GSWeb.framework/GSWDisplayGroup.m ([GSWDisplayGroup
+	-setCurrentBatchIndex:]): fixed index out of bound.
+
 2000-11-04  Manuel Guesdon <mguesdon@orange-concept.com>
 
 	* GSWeb.framework/GSWElementIDString.[hm]: fix bug
